refactor: Se organizó la estrcutura del codgio a nivel general. Nuevos comentarios y manejo de errores.
